--- a/main.html
+++ b/main.html
@@ -4,6 +4,15 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		.container{
+	width:300px;
+	background-color:lightblue;
+	border:15px solid blue;
+	padding:50px;
+	margin:20px;
+}
+	</style>
 </head>
 
 <body>
