--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container">
-		<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
+	<div>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
